<resources>
    <string name="app_name">HireUp</string>
    <string name="sign_in_with_google">Sign In with Google</string>
    <string name="sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="web_client_id">2700652504-n730j58q2vv1j5bostpgtmae870cn8pr.apps.googleusercontent.com</string>
    <string name="unlock_the_possibilities_of_service_excellence">Unlock the possibilities of service</string>
    <string name="full_name">Full Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="excellence">excellence</string>
    <string name="profile_picture">Profile picture</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Starting_From">Starting From</string>
    <string name="rupees">Rs.</string>
    <string name="line" />
    <string name="cleaning" />
    <string name="select_a_date">Select a date</string>
    <string name="_22_jul_2023">22,Jul 2023</string>
    <string name="rate">Rate</string>
    <string name="your_address">Your Address</string>
    <string name="change">Change</string>
    <string name="description">Description</string>
    <string name="book_now">Book Now</string>
    <string name="jenn_wilson">Jenn Wilson</string>
    <string name="_19_b_kollupitiya_colombo_03">19/B, Kollupitiya, Colombo 03</string>
    <string name="starting_from">Starting From :</string>
    <string name="working_hours">Working hours</string>
    <string name="bookings_available_from">Bookings Available From</string>
    <string name="about">About</string>
    <string name="profile">Profile</string>
    <string name="personal_information">Personal Information</string>
    <string name="address">Address</string>
    <string name="my_reviews">My Reviews</string>
    <string name="privacy_policies">Privacy Policies</string>
    <string name="help_support"><![CDATA[Help & Support]]></string>
    <string name="log_out">Log Out</string>
    <string name="contact_number">Contact Number</string>
    <string name="gender">Gender</string>
    <string name="save_information">Save Information</string>
    <string name="title_activity_add_address">AddAddress</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="edit_my_address">Edit My Address</string>
    <string name="district">District</string>
    <string name="city">City</string>
    <string name="save_address">Save Address</string>
    <string name="update_my_address">Update My Address</string>
    <string name="update_address">Update Address</string>
    <string name="add_address">Add Address</string>
    <string name="in_progress">In Progress</string>
    <string name="painting">Painting</string>
    <string name="booking">Booking</string>
    <string name="bottom_sheet_service_provider_fee">Service Provider Fee:</string>
    <string name="hardware">Hardware</string>
    <string name="categories">Categories</string>
    <string name="see_all">See All</string>
    <string name="chat">Chat</string>
    <string name="name">Name</string>
    <string name="messages">Messages</string>
    <string name="at">AT</string>
    <string name="order_id">Order ID</string>
    <string name="payment">Payment</string>
    <string name="service_type">Service Type</string>
    <string name="rate_your_service_provider">Rate your service provider</string>
    <string name="leave_your_feedback">Leave your feedback</string>
    <string name="submit">Submit</string>
    <string name="remove">Remove</string>
    <string name="checkout">Checkout</string>
    <string name="place_order_button_text">Place Order</string>
    <string name="total">Total</string>
    <string name="order_summary">Order Summary</string>
    <string name="select_payment_method">Select Payment Method</string>
    <string name="cash">Cash</string>
    <string name="visa_master">Visa/Master</string>
    <string name="top_rated_hardware_stores">Top Rated Hardware Stores</string>
    <string name="recommended_for_you">Recommended For You</string>
    <string name="cash_on_delivery">Cash on Delivery</string>

</resources>